COLLADA exporter writes incorrect xmag/ymag value #32251

Closed
opened 2012-08-03 19:26:07 +02:00 by Joseph Thomson · 3 comments

%%%The COLLADA 1.5 specification says this:

"The X and Y magnifications are simple scale factors, applied to the X and Y components of the
orthographic viewport. As such, if your default orthographic viewport is -1,1],[-1,1 as in OpenGL
and DirectX, your COLLADA orthographic viewport becomes -xmag,xmag],[-ymag,ymag. This
gives an orthographic width of xmag/2 and an orthographic height of ymag/2."

Ignoring the fact that the last sentence completely contradicts the rest of the paragraph (I think they must have meant xmag * 2 and ymag * 2), what this would suggest is that with a viewport size of (1.0, 1.0), the viewport boundaries are [-0.5, 0.5],[-0.5, 0.5], and therefore xmag/ymag should be 0.5. What the COLLADA exporter produces is twice this value, i.e. 1.0.

I noticed this due to a discrepancy between Blender's and 3DS Max's COLLADA exporters; 3DS Max exports as you would expect it to from reading the spec, which makes me even more sure that the Blender exporter is doing the wrong thing.

How to reproduce:

  • Open the attached blend file
  • Observe that the 0.9x0.9x0.9 cube fits just within the viewport, indicating a viewport width of 1.0
  • Export a COLLADA file
  • Open COLLADA file in your favourite text editor and search for "xmag"
  • Observe an xmag value of 1 (when it should be 0.5)

Windows XP, ATI Radeon HD 3400, Blender 2.63%%%

%%%The COLLADA 1.5 specification says this: "The X and Y magnifications are simple scale factors, applied to the X and Y components of the orthographic viewport. As such, if your default orthographic viewport is [[-1,1],[-1,1]] as in OpenGL and DirectX, your COLLADA orthographic viewport becomes [[-xmag,xmag],[-ymag,ymag]]. This gives an orthographic width of xmag/2 and an orthographic height of ymag/2." Ignoring the fact that the last sentence completely contradicts the rest of the paragraph (I think they must have meant xmag * 2 and ymag * 2), what this would suggest is that with a viewport size of (1.0, 1.0), the viewport boundaries are [-0.5, 0.5],[-0.5, 0.5], and therefore xmag/ymag should be 0.5. What the COLLADA exporter produces is twice this value, i.e. 1.0. I noticed this due to a discrepancy between Blender's and 3DS Max's COLLADA exporters; 3DS Max exports as you would expect it to from reading the spec, which makes me even more sure that the Blender exporter is doing the wrong thing. How to reproduce: - Open the attached blend file - Observe that the 0.9x0.9x0.9 cube fits just within the viewport, indicating a viewport width of 1.0 - Export a COLLADA file - Open COLLADA file in your favourite text editor and search for "xmag" - Observe an xmag value of 1 (when it should be 0.5) Windows XP, ATI Radeon HD 3400, Blender 2.63%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Thanks for reporting.

I have added a fix to the Collada exporter/Importer, see revision 49566.
I currently can not verify if this fix is compliant to the Collada specifications.
So please feel free to complain if the fix does not solve the problem.%%%

%%%Thanks for reporting. I have added a fix to the Collada exporter/Importer, see revision 49566. I currently can not verify if this fix is compliant to the Collada specifications. So please feel free to complain if the fix does not solve the problem.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32251
No description provided.