COLLADA: fix for #32251. This seems to be compliant to the Collada 1.4.1 specification.